# agent-search-examples

./: .gitignore  README.md
client_agent/: README.md  langgraph.json  main.py  pyproject.toml
client_agent/src/: agent.py  prompt.py  tools.py
organization_a_agent/: langgraph.json  pyproject.toml
organization_a_agent/.well-known/: budget-planner-agent-card.json  currency-converter-agent-card.json
organization_a_agent/api/: app.py
organization_a_agent/src/budget_planner/: agent.py  prompt.py  tool.py
organization_a_agent/src/currency_converter/: agent.py  prompt.py  tool.py
organization_b_agent/: langgraph.json
organization_b_agent/.well-known/: meeting-scheduler-agent-card.json  note-summarizer-agent-card.json
organization_b_agent/api/: app.py
organization_b_agent/src/meeting_scheduler/: agent.py  prompt.py  tool.py
organization_b_agent/src/note_summarizer/: agent.py  prompt.py  tool.py
