[project]
name = "agent-c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.2",
    "langchain-anthropic>=1.3.1",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "payelink-agent-search>=0.1.4",
]
