[project]
name = "discoverable-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.9",
]
